Integration tests for Catalog Federation